# appimage-manager

./: .gitignore  CMakeLists.txt  README.md  appimage-manager.appimage  do_build.sh
.github/workflows/: ci.yml  release.yml
daemon/: CMakeLists.txt  appimage-manager.service.in  appimage_icon.cpp  appimage_icon.hpp  appimage_icon_paths.hpp  config.json.example  dbus_manager_adaptor.cpp  dbus_manager_adaptor.hpp  desktop_notification.cpp  desktop_notification.hpp  directory_watcher.cpp  directory_watcher.hpp  list_appimage_contents.cpp  main.cpp  test_dbus_adaptor.cpp
docs/: user-guide.md  user-guide.ru.md
gui/: CMakeLists.txt  app_settings_dialog.cpp  app_settings_dialog.hpp  appimage_asset_selector.cpp  appimage_asset_selector.hpp  github_release_selector.cpp  github_release_selector.hpp  install_app_image_dialog.cpp  install_app_image_dialog.hpp  main.cpp  main_window.cpp  main_window.hpp  watch_directories_dialog.cpp  watch_directories_dialog.hpp
lib/: CMakeLists.txt
lib/application/: extract_icon.cpp  extract_icon.hpp  generate_desktop.cpp  generate_desktop.hpp  scan_directories.cpp  scan_directories.hpp
lib/domain/entities/: app_image_record.hpp  config.hpp  install_type.hpp  launch_settings.hpp
lib/domain/repositories/: config_repository.hpp  launch_settings_repository.hpp  registry_repository.hpp
lib/infrastructure/json/: json_config_repository.cpp  json_config_repository.hpp  json_launch_settings_repository.cpp  json_launch_settings_repository.hpp  json_registry_repository.cpp  json_registry_repository.hpp
packaging/appimage/: AppRun  appimage-manager.desktop  build_appimage.sh
tests/: CMakeLists.txt  main.cpp  test_config_repository.cpp  test_dbus_getallrecords.cpp  test_domain.cpp  test_generate_desktop.cpp  test_launch_settings_repository.cpp  test_registry_repository.cpp  test_scan_directories.cpp  tests.hpp
